# switchgear

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
channels/email/: CHANNEL.md
docs/: backup-and-restore.md  configuration.md  deployment-integrations.md  orchestration.md  self-hosting.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: empty-states.spec.ts  nav.spec.ts  pending-approve.spec.ts  screenshots.spec.ts  workflow-toggle.spec.ts
frontend/src/: config.ts  main.tsx  router.tsx  (+1 more)
scripts/: run_smoke_test.sh  setup.sh
tests/: conftest.py  fakes.py  test_agent_writes.py  test_apply_executor.py  test_approval_escalation.py  test_approvals_api.py  test_artifact_files.py  test_artifacts.py  test_auth.py  test_brief_generator.py  test_browser.py  test_browser_tool.py  test_career_bank.py  test_channel_flagged_ui.py  test_channel_ingest.py  test_channel_injection.py  test_channel_model.py  test_channel_send.py  test_channel_sendfns.py  test_channel_tools.py  test_channel_transport.py  test_channel_triage.py  test_channels_api.py  test_config.py  test_conversation_ui_history.py  test_conversations.py  test_core_tools.py  test_cron.py  test_digest_executor.py  test_email.py  test_embeddings.py  test_fetch_jobs_tool.py  test_frontend.py  test_gated_actions.py  test_gateway.py  test_job_fetchers.py  test_job_model.py  test_job_scoring.py  test_live_updates.py  test_loop.py  (+40 more)
(+282 files in other folders)
