[project]
name = "switchgear"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "pyyaml>=6",
    "jsonschema>=4.26.0",
    "croniter>=3.0",
    "cel-expr-python>=0.1.3",
]

[project.optional-dependencies]
browser = ["playwright>=1.45"]
gcp = [
    "google-auth>=2.30",
    "google-cloud-firestore>=2.16",
    "google-cloud-scheduler>=2.13",
    "google-cloud-tasks>=2.18",
]
full = [
    "playwright>=1.45",
    "google-auth>=2.30",
    "google-cloud-firestore>=2.16",
    "google-cloud-scheduler>=2.13",
    "google-cloud-tasks>=2.18",
]

[project.scripts]
switchgear = "switchgear.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switchgear"]
